Add Watcher classes for monitoring boards/guilds Added protected Dispose method for Client Added disposal-related events for Client

--- a/Ruqqus.NET/Strings.resx
+++ b/Ruqqus.NET/Strings.resx
@@ -29,4 +29,7 @@
     <data name="Failed" xml:space="preserve">
         <value>Failed</value>
     </data>
+    <data name="InvalidDelay" xml:space="preserve">
+        <value>Delay must be greater than 0.</value>
+    </data>
 </root>
